[tool.poetry]
name = "crpt-screening"
version = "0.1.0"
description = ""
authors = ["Valerian <@VelValerian>"]
readme = "README.md"
packages = [{include = "crpt_screening"}]

[tool.poetry.dependencies]
python = "^3.11"
binance-futures-connector = "^3.3.1"
pandas = "^2.0.3"
urllib3 = "^2.0.3"
datetime = "^5.1"
ta = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
